clang/test/BSC/Negative/Method/BuiltInType/int_instance_function_multi_declaration_2/int_header_2.hbs

int int::to_int(int* this) { // expected-error {{redefinition of 'to_int'}}
  return *this;
}
